[gd_scene load_steps=8 format=3 uid="uid://dhx6ao5upgkdc"]

[ext_resource type="Script" uid="uid://d2p7oqcara5b3" path="res://scripts/tools/pogo_picker.gd" id="1_68h75"]
[ext_resource type="PackedScene" uid="uid://c5bcns5msil8a" path="res://assets/tool_meshes/pogo_picker.tscn" id="2_68h75"]

[sub_resource type="Animation" id="Animation_p7puk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pickerMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.09788, -0.0423151, -1.17658)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pickerMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0523599, -0.785398, -3.10517e-09)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:state")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_68h75"]
resource_name = "ready"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pickerMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector3(1.09788, -0.0423151, -1.17658), Vector3(0, -0.942, -0.377)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pickerMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.0523599, -0.785398, -3.10517e-09), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:state")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.95, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1gklb"]
_data = {
&"RESET": SubResource("Animation_p7puk"),
&"ready": SubResource("Animation_68h75")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_68h75"]
radius = 0.3

[sub_resource type="CylinderShape3D" id="CylinderShape3D_68h75"]
height = 0.25
radius = 0.3

[node name="pogoPicker" type="Node3D"]
script = ExtResource("1_68h75")
pickup_paper = true
pickup_plastic = true
pickup_metal = true
tool_name = "pogo_picker"

[node name="pickerAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1gklb")
}

[node name="pickerMesh" parent="." instance=ExtResource("2_68h75")]
transform = Transform3D(0.707107, -0.0370071, -0.706138, -3.10091e-09, 0.998629, -0.052336, 0.707107, 0.0370071, 0.706138, 1.09788, -0.0423151, -1.17658)
layers = 2

[node name="trashArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.1, 0)
collision_layer = 0
collision_mask = 30

[node name="trashCol2" type="CollisionShape3D" parent="trashArea"]
shape = SubResource("SphereShape3D_68h75")

[node name="bounceArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.1, 0)
collision_layer = 0

[node name="trashCol" type="CollisionShape3D" parent="bounceArea"]
shape = SubResource("CylinderShape3D_68h75")
